--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.7",
     "socket.io": "^3.1.1",
     "socket.io-client": "^3.1.1"
   }
