--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Socket.io exploration. Chat aplication.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js",
+    "server": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
